src/objects/Award_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Able_to_enroll_due_to_age_set_to_55__c</fullName>
        <label>Able to enroll due to age set to 55</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Able_to_enroll_due_to_income_eligibility__c</fullName>
        <label>Able to Enroll - Income Elig. Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abused_Neglected_Children_IN__c</fullName>
        <label>Abused/Neglected Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abused_Neglected_Children_NIH__c</fullName>
        <label>Abused/Neglected Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abused_Neglected_Children_V__c</fullName>
        <formula>Abused_Neglected_Children_IN__c  +  Abused_Neglected_Children_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abused/Neglected Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acceptable_Thresholds__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if automated thresholds are acceptable</inlineHelpText>
        <label>Acceptable Thresholds?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Reports__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Reports</label>
        <referenceTo>Action_Reports__c</referenceTo>
        <relationshipLabel>Award Reporting</relationshipLabel>
        <relationshipName>Award_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Mil_fam_mbrs_assistance_received__c</fullName>
        <label>Active Mil. fam mbrs assistance received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Add1__c</fullName>
        <description>DDP</description>
        <formula>Award__r.Application_ID__r.Project__r.Organization__r.Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add2__c</fullName>
        <description>DDP</description>
        <formula>Award__r.Application_ID__r.Project__r.Organization__r.Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adjudicated_Youth_Juvenile_Offender__c</fullName>
        <formula>Adjudicated_Youth_Juvenile_Offenders_IN__c + Adjudicated_Youth_Juvenile_Offenders_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjudicated Youth/Juvenile Offenders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjudicated_Youth_Juvenile_Offenders_IN__c</fullName>
        <label>Adjudicated Youth/Juvenile Offenders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjudicated_Youth_Juvenile_Offenders_NIH__c</fullName>
        <label>AdjudicatedYouth/Juvenile Offenders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Group_55_to_59__c</fullName>
        <label>55 to 59</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Group_60_to_69__c</fullName>
        <label>60 to 69</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Group_70_to_79__c</fullName>
        <label>70 to 79</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Group_85_and_over__c</fullName>
        <label>85 and over</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ages_13_19__c</fullName>
        <label>Ages 13 - 19</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ages_20_44__c</fullName>
        <label>Ages 20 - 44</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ages_45_64__c</fullName>
        <label>Ages 45 - 64</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ages_6_to_12__c</fullName>
        <label>Ages 6 - 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ages_85_or_higher__c</fullName>
        <label>Ages 85 or higher</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alzheimer_s_DiseaseIN__c</fullName>
        <label>Alzheimer&apos;s Disease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alzheimer_s_Disease_NIH__c</fullName>
        <label>Alzheimer&apos;s Disease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alzheimer_s_Disease_V__c</fullName>
        <formula>Alzheimer_s_DiseaseIN__c  +  Alzheimer_s_Disease_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alzheimer&apos;s Disease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alzheimer_s_Disease__c</fullName>
        <label>Alzheimer&apos;s Disease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>American_Indian_or_Alaskan_Native__c</fullName>
        <label>American Indian or Alaskan Native</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Match_Waiver_for_This_Project__c</fullName>
        <label>Approved Match Waiver for This Project?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asian__c</fullName>
        <label>Asian</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auth_rep__c</fullName>
        <description>DDP</description>
        <formula>Award__r.Application_ID__r.Authorized_Representative__r.FirstName &amp; &quot; &quot; &amp; Award__r.Application_ID__r.Authorized_Representative__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auth rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Amount__c</fullName>
        <inlineHelpText>Total federal funds authorized for this funding period.</inlineHelpText>
        <label>Authorized Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorized_By__c</fullName>
        <formula>IF(I_agree__c == true, $User.FirstName +&quot; &quot;+ $User.LastName  , null)</formula>
        <label>Authorized By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Representative_Name__c</fullName>
        <description>req #1103 , #1104</description>
        <formula>Award__r.Application_ID__r.Authorized_Representative__r.FirstName + &quot; &quot; + Award__r.Application_ID__r.Authorized_Representative__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorized Representative Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Representative__c</fullName>
        <label>Authorized Representative</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AwardName__c</fullName>
        <formula>Award__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AwardName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Name</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Award Reporting (Award Name)</relationshipLabel>
        <relationshipName>Award_Reporting1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Id</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Award Reporting</relationshipLabel>
        <relationshipName>Award_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balance_Undrawn__c</fullName>
        <inlineHelpText>Total amount undrawn to date.</inlineHelpText>
        <label>Balance Undrawn</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_of_Expenditures__c</fullName>
        <inlineHelpText>Total amount expended to date.</inlineHelpText>
        <label>Balance of Expenditures</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Basis__c</fullName>
        <label>Basis</label>
        <picklist>
            <picklistValues>
                <fullName>Accural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Basis_of_Accounting__c</fullName>
        <label>Basis of Accounting</label>
        <picklist>
            <picklistValues>
                <fullName>Accrual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_to_age_5__c</fullName>
        <description>Clients Served Age Groups</description>
        <label>Birth to age 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Black_or_African_American__c</fullName>
        <label>Black or African American</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <defaultValue>&quot;I certify to the best of my knowledge and belief that the report is true, complete, and accurate, and the expenditures, disbursements, and cash receipts are for the purposes and intent set forth in the award documents. I am aware that any false, fictitious, or fraudulent information may subject me to criminal, divil, or administrative penalties. (U.S. Code, Title 18, Section 1001)&quot;</defaultValue>
        <label>Certification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Children_with_HIV_AIDS_IN__c</fullName>
        <label>Children with HIV/AIDS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Children_with_HIV_AIDS_NIH__c</fullName>
        <label>Children with HIV/AIDS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Children_with_HIV_AIDS_V__c</fullName>
        <formula>Children_with_HIV_AIDS_IN__c  +  Children_with_HIV_AIDS_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Children with HIV/AIDS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chronic_Care_Disab_Frail_Elderly_NIH__c</fullName>
        <label>Chronic Care Disab/Frail Elderly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chronic_Care_Disab_Frail_Elderly_V__c</fullName>
        <formula>Chronic_Care_Disabilities_Frail_EldIN__c  +  Chronic_Care_Disab_Frail_Elderly_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chronic Care Disab/Frail Elderly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chronic_Care_Disabilities_Frail_EldIN__c</fullName>
        <label>Chronic Care Disab/Frail Elderly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chronic_Care_Disabilities_Frail_Elderly__c</fullName>
        <label>Chronic Care Disabilities/Frail Elderly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clients_awaiting_a_Senior_Companion__c</fullName>
        <label>Clients awaiting a Senior Companion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Out_Certification_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Out Certification Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Out_Certification__c</fullName>
        <defaultValue>&quot;I certify that our agency has completed all closeout actions; accomplished all program and financial requirements; secured all reports; and reconciled all funding with respect to sub grants we have awarded under the above-referenced grant.&quot;</defaultValue>
        <label>Close Out Certification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_volunteers_managed__c</fullName>
        <label># of Community volunteers managed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_volunteers_recruited__c</fullName>
        <label># of Vols. Recruiting Community Vols.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Continuing_Beyond_the_Expiration_Date__c</fullName>
        <inlineHelpText>Note: Is this program continuing beyond the expiration date of this CNS grant? If Yes, specify below if the equipment will be used after the expiration of the grant.</inlineHelpText>
        <label>Continuing Beyond the Expiration Date?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_on__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_report_submitted__c</fullName>
        <label>Date report submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developmental_Disabilities_IN__c</fullName>
        <label>Developmental Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developmental_Disabilities_NIH__c</fullName>
        <label>Developmental Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developmental_Disabilities_V__c</fullName>
        <formula>Developmental_Disabilities_IN__c  +  Developmental_Disabilities_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developmental Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developmental_Disabilities__c</fullName>
        <label>Developmental Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developmentally_Disabled_Adult_IN__c</fullName>
        <label>Developmentally Disabled Adult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developmentally_Disabled_Adult_NIH__c</fullName>
        <label>Developmentally Disabled Adult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developmentally_Disabled_Adult_V__c</fullName>
        <formula>Developmentally_Disabled_Adult_IN__c  +  Developmentally_Disabled_Adult_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developmentally Disabled Adult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developmentally_Disabled_Adult__c</fullName>
        <label>Developmentally Disabled Adult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disaster_Services_of_clients__c</fullName>
        <label>Receiving Disaster Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disbursed_Amount__c</fullName>
        <inlineHelpText>Total amount disbursed to date.</inlineHelpText>
        <label>Disbursed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Does_Not_Apply_to_Grant__c</fullName>
        <defaultValue>&quot;Does Not Apply to Grant: This report is not required since Equipment with a Current Fair Market Value of $5000.00 or more were not purchased with federal grants funds, as a part of this grant.&quot;</defaultValue>
        <label>Does Not Apply to Grant</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_Not_Apply_to_Grant_check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This report is not required since Equipment with a Current Fair Market Value of $5000.00 or more were not purchased with federal grants funds, as a part of this grant.</inlineHelpText>
        <label>Does Not Apply to Grant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dollar_value_of_cash_resources_leveraged__c</fullName>
        <label>$ value of cash resources leveraged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollar_value_of_in_kind_resources_levera__c</fullName>
        <label>$ value of in-kind resources leveraged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drawdown_Amount__c</fullName>
        <description>Drawdown Amount (Populated from Momentum)</description>
        <inlineHelpText>Populated from Momentum</inlineHelpText>
        <label>Drawdown Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drawdowns__c</fullName>
        <inlineHelpText>Cumulative recipient share of outlays</inlineHelpText>
        <label>Drawdowns</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drawdowns_within_20_of_the_Reported_OBG__c</fullName>
        <formula>IF(Drawdown_Amount__c&gt;(0.2*Reported_Obligations__c),&apos;No&apos;,&apos;Yes&apos;)</formula>
        <label>Drawdowns within 20% of the Reported OBG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunity_of_clients__c</fullName>
        <label>Receiving Economic Opportunity Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education_of_clients__c</fullName>
        <label>Receiving Education Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emotional_Disabilities_IN__c</fullName>
        <label>Emotional Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emotional_Disabilities_NIH__c</fullName>
        <label>Emotional Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emotional_Disabilities_V__c</fullName>
        <formula>Emotional_Disabilities_IN__c  +  Emotional_Disabilities_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emotional Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employment_moved_family_new_interests__c</fullName>
        <label>Employment, moved, family, new interests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship_of_clients__c</fullName>
        <label>Receiving Environmental Stewardship Svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenditure_Comments__c</fullName>
        <label>Expenditure Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expenditure_Threshold__c</fullName>
        <formula>(Recipient_share_of_exp_Cumulative__c /  Total_Fed_Funds_authorized_Cumulative__c) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expenditure Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenditures__c</fullName>
        <label>Expenditures</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extended_Due_Date__c</fullName>
        <label>Extended Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAIN__c</fullName>
        <formula>Award__r.Master_Award__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FAIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFR_Type__c</fullName>
        <label>FFR Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiannual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Families_of_active_duty_military_of__c</fullName>
        <label>Active Mil. Fam Mbrs Assistance Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>DDP</description>
        <formula>Award__r.Application_ID__r.Project__r.Organization__r.Fax1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FedShareUnliquidatedObligation_Cumulativ__c</fullName>
        <label>Fed Share of Unliq. Obs. – Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FedShareUnliquidatedObligation_ThisPerio__c</fullName>
        <label>Fed Share of Unliq. Obs. – This Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fed_Share_as_of_Total_Expenditures__c</fullName>
        <formula>of_share_of_total_expenditures__c  +  of_share_of_total_expenditures_federal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fed Share as % of Total Expenditures</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fed_Share_of_Unliquidated_Balances__c</fullName>
        <label>Fed Share of Unliquidated Balances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fed_Share_of_expenditures_This_Period__c</fullName>
        <label>Fed Share of expenditures-This Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Department_Name__c</fullName>
        <label>Federal Department Name</label>
        <picklist>
            <picklistValues>
                <fullName>Department of Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Homeland Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Department of State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Veteran Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Protection Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Services Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Health and Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Housing and Urban Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Aeronautics and Space Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Regulatory Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Science Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of Personnel Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small business Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Security Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Agency for International Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All other agencies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Federal_Expenditure_Rate__c</fullName>
        <label>Federal Expenditure Rate</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Federal_Funds_Unobligated__c</fullName>
        <label>Recipient- % Federal Funds Unobligated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Federal_Share_of_Volunteer_Expenses__c</fullName>
        <label>Federal Share of Volunteer Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Share_of_expenditures_C__c</fullName>
        <formula>Federal_Share_of_expenditures__c  +  Fed_Share_of_expenditures_This_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fed Share of Expenditures - Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Share_of_expenditures_Cumulative__c</fullName>
        <label>Federal Share of expenditures-Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Share_of_expenditures__c</fullName>
        <label>Federal Share of expenditures-Previous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Share_of_unliquidated_obligation__c</fullName>
        <label>Fed Share of Unliq. Obs. – Previous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Female__c</fullName>
        <label>Female</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Final FSR Indicator</description>
        <label>Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Contact_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>As per #897</description>
        <label>Financial Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award_Reporting_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GO_Email__c</fullName>
        <label>GO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Grant_End_Date__c</fullName>
        <formula>Award__r.Grant_Performance_Period_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Number__c</fullName>
        <label>FAIN(FederalAward Identification Number)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Period_End_Date__c</fullName>
        <formula>Award__r.Grant_Performance_Period_End_Date__c</formula>
        <label>Grant Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Period_Start_Date__c</fullName>
        <formula>Award__r.Grant_Performance_Period_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Year__c</fullName>
        <label>Grant Year</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>